fix: Search button is large on mobile screens
Button should be small with an icon on mobile screens
## Implementation
Change CSS classes to match the media queries

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -50,6 +50,14 @@ h4 {
   filter: brightness(0) invert(1);
 }
 
+.large-btn {
+  min-width: 100%;
+}
+
+.small-btn {
+  min-width: 48px;
+}
+
 @media screen and (min-width: 768px) {
   .topbar {
     background-image: url('/assets/tablet/bg-pattern-header.svg');
